Updates to inference notebook
Trying a move away from log parameters

--- a/notebooks/exploratory/5.0-twh-inferrence-AAcollisions.md
+++ b/notebooks/exploratory/5.0-twh-inferrence-AAcollisions.md
@@ -12,6 +12,10 @@ kernelspec:
   name: python3
 ---
 
+# Bayesian Inference with Markov Chain Monte Carlo
+
+So far, the analysis notebooks have examined inverting the ELF have used non-linear least squares. This works to some extent, but the resulting collision rate model parameters are very sensitive to the intial guess and the ELF itself is actually fairly independent of this choice. In this notebook, we use another tool called Bayesian inference to not find the single, best set of parameters for the collision rate model, but finds the _posterior_ distribution $p(\alpha|y_\mathrm{data})$ of sets of parameters $\alpha$ for a given set of data $y_\mathrm{data}$. Because the number of parameters we are searching for spans more than a hand-full of parameters for our model (in this case, five), we rely on Markov chain Monte Carlo to efficient sample from our probability distribution.
+
 ```{code-cell} ipython3
 # Load the "autoreload" extension so that code can change
 %load_ext autoreload
@@ -22,7 +26,9 @@ kernelspec:
 
 ```{code-cell} ipython3
 import numpy as np
+rng = np.random.default_rng()
 import matplotlib.pyplot as plt
+from scipy import optimize
 from functools import partial
 
 import emcee 
@@ -39,17 +45,16 @@ import warnings
 warnings.filterwarnings('ignore')
 ```
 
-# Define collision rate model
+### Function to normalize rows of data
 
 ```{code-cell} ipython3
-# define our collision rate function
-def collisionrate(freq, params):
-    # real part
-    recollision = collision_activate_decay(freq, *params)
-    # imaginary part
-    imcollision = collrateimag(recollision)
-
-    return recollision + 1j * imcollision
+def normrows(A):
+    """
+    Normalize rows of ndim array A to have a max value of 1
+    """
+    if A.ndim > 1:
+        return A / np.max(A, axis=1, keepdims=True)
+    return A / np.max(A)
 ```
 
 # Get the data
@@ -66,92 +71,220 @@ d_ang = 0.18071 # 1/[angstroms]**3
 d = d_ang * AtomicUnits.length**3
 
 datadump = np.loadtxt(datafile, skiprows=9, usecols=[0, 5, 6, 9], unpack=True)
-freq_data = datadump[0] # [eV]
-print(f"length of data = {len(freq_data)}")
+orig_freq_data = datadump[0] # [eV]
+print(f"length of original data = {len(orig_freq_data)}")
 collrate_data = datadump[1] + 1j * datadump[2]
 dos_data = datadump[3]
 
 # function for true collision rate
-true_collrate_fn = lambda x : np.interp(x, freq_data / AtomicUnits.energy, collrate_data)
+true_collrate_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, collrate_data)
 # function for DOS ratio
-dos_fn = lambda x : np.interp(x, freq_data / AtomicUnits.energy, dos_data)
+dos_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, dos_data)
 
+# create a new, more regular frequency grid that what exists in the data file
+freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 99) # [eV]
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
-wavenum_val = 0.7 / AtomicUnits.length # 1/[angstrom]
+wavenum = 1.5 # 1/[angstrom]
 ```
 
-### Create ELF data with collision rate data
-
-We will also trim down the number of data points.
+### Create ELF data with collision rate data, and an noisy ELF data set
 
 ```{code-cell} ipython3
-# Reduce the amount of data we are considering
-freq_data_trim = freq_data[::8]
-
+# true ELF data
 elf_data = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
-                        wavenum_val * AtomicUnits.length,
-                        freq_data_trim / AtomicUnits.energy,
+                        wavenum * AtomicUnits.length,
+                        freq_data / AtomicUnits.energy,
                         true_collrate_fn
-                       )
-print(elf_data.shape)
+                    )
+print(f"shape of ELF data = {elf_data.shape}")
+
+# Normalized data
+norm_elf_data = normrows(elf_data)
+```
+
+### plot the collision rate data
+
+```{code-cell} ipython3
+plt.semilogx(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).real, c="C0", label="real")
+plt.plot(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).imag, c="C0", ls='--', label="imag.")
+plt.xlabel(r"$\omega$ [eV]")
+plt.ylabel("collision rate [au]")
+plt.legend()
+```
+
+## Normalized ELF function
+
+```{code-cell} ipython3
+def normelf(dielectricfn, wavenum, freq, collisionfn, collparams):
+    """ ELf with normalized rows """
+    elf = elec_loss_fn(dielectricfn,
+                       wavenum,
+                       freq,
+                       lambda x: collisionfn(x, collparams)
+                      )
+    return normrows(elf)
+```
+
+# Define collision rate model
+
+```{code-cell} ipython3
+# define our collision rate function
+def collisionrate(freq, params):
+    # real part
+    recollision = collision_activate_decay(freq, *params)
+    # imaginary part
+    imcollision = collrateimag(recollision)
+
+    return recollision + 1j * imcollision
 ```
 
 # Define residual function
 
 ```{code-cell} ipython3
-def residual_fn(x, y, dielectricfn, wavenum, collisionfn, params):
-    """ 
-    x: frequency data points corresponding to output data `y`
-    y: ELF data points
-    dielectricfn: dielectric function, a function of `wavenum` and `freq`
-    wavenum: wave number value(s)
-    freq: array of frequency values
+def residual_fn(
+    freq, 
+    ydata,
+    dielectricfn, 
+    wavenum, 
+    collisionfn, 
+    params, 
+    type="abs"
+):
+    """
+    Returns a 1D residual function between the data and the normalized ELF model.
+    Can be used with multi-dimensional array inputs as long as `ydata`
+    and `dielectricfn(wavenum, freq, lambda x: collisionfn(x, params))`
+    are broadcastable (if `len(wavenum) == m` and `len(freq) == n`,
+    then `dielectricfn(wavenum, freq, lambda x: collisionfn(x, params))`
+    has a shape (m, n)).
+
+    freq: frequency data points corresponding to output data `ydata`, atomic units
+    ydata: ELF data points, atomic units
+    dielectricfn: dielectric function, a function of `wavenum` and `x`
+    wavenum: wave number value(s), atomic units
     collisionfn: function for collision rate, depends on `freq` and the
         parameters `params` we want to optimize
     params (tuple): parameters that go into collision rate model `collisionfn`
+    type (string): the type of residual function. There are four choices:
+        "abs" - absolute residual: ydata - model
+        "rel" - relative residual: (ydata - model) / ydata
+
+        The different types will tend to emphasize different features in the
+        data that the parameters of the model should be optimized to fit.
     
     returns:
-        residual of the model with respect to the data `y`
+        residual of the model with respect to the data `ydata`. If `ydata`
+        has shape (m, n), then return array has shape (m * n, ).
     """
-    elf_calc = elec_loss_fn(dielectricfn,
-                            wavenum,
-                            x,
-                            lambda x: collisionfn(x, params))
-    return y - elf_calc
+    # normalized ELF calculations
+    elf_calc = normelf(dielectricfn,
+                       wavenum,
+                       freq,
+                       collisionfn,
+                       params
+                      )
+    
+    match type:
+        case "abs":
+            weight = 1
+        case "rel":
+            weight = ydata
+        case _:
+            raise ValueError(f"residual type {type} not accepted")
+            
+    return ((ydata - elf_calc) / weight).flatten()
+```
+
+```{code-cell} ipython3
+# setup
+residual = partial(residual_fn,
+                   freq_data / AtomicUnits.energy,
+                   elf_data,
+                   Mermin(ElectronGas(t, d, dos_fn)),
+                   wavenum * AtomicUnits.length,
+                   collisionrate,
+                   type="rel"
+                  )
+# initial parameter guesses
+initparams = (1, 1, 1, 1, 1)
+
+# optimization results
+optresult = optimize.least_squares(residual, initparams, bounds=(0, np.inf), max_nfev=150)
+```
+
+```{code-cell} ipython3
+optresult
+```
+
+```{code-cell} ipython3
+# original
+plt.semilogx(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).real, c="C3", label="Avg. Atom")
+plt.plot(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).imag, c="C3", ls="--")
+# optimized
+plt.plot(freq_data, collisionrate(freq_data / AtomicUnits.energy, optresult.x).real, c="C0", label="opt.")
+plt.plot(freq_data, collisionrate(freq_data / AtomicUnits.energy, optresult.x).imag, c="C0", ls="--")
+plt.xlabel(r"$\hbar\omega$ [eV]")
+plt.ylabel("collision rate [au]")
+plt.legend()
+```
+
+```{code-cell} ipython3
+plt.loglog(freq_data, elf_data, c="C3", label="Avg. Atom")
+opt_elf = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
+                       wavenum * AtomicUnits.length,
+                       freq_data / AtomicUnits.energy,
+                       lambda x: collisionrate(x, optresult.x)
+                      )
+plt.plot(freq_data, opt_elf, c="C0", ls='-.', label="opt.")
+plt.ylabel("ELF [au]")
+plt.xlabel(r"$\hbar \omega$ [eV]")
+plt.ylim(1e-6) # resolution of data
+plt.legend()
 ```
 
 # Perform MCMC
 
 +++
 
-The collision rate model we are using has parameters that don't run over the whole real line. For example, the `*_height` keyword argument in our parameters dictionary should be strictly positive. Additionally, other arguments like the location of the Drude peaks or the sigmoid function can have wildly varying magnitudes (see the data above). It's in our best interest when performing MCMC sampling to actually work with the log of each of these parameters, and transform back in post processing.
-
-+++
-
-Define our prior probability density function (pdf), likelihood, and posterior pdf
+The collision rate model we are using has parameters that don't run over the whole real line. For example, the `*_height` keyword argument in our parameters dictionary should be strictly positive. We can define our (log) prior distribution to be a uniform distribution over specific ranges of the real line. This will help constrain our parameters within a defined range.
 
 ```{code-cell} ipython3
-def logprior(logparams, limits=(-5,5)):
+def logprior(params, limits):
     """
-    Uniform prior for the (log of the) parameters
+    Uniform prior for the parameters
 
-    logparams: array_like
+    params: array_like
         logarithms of the parameters of collision frequency model
     limits: array_like of length 2
-        limits of the uniform distribution, same for all parameters
+        limits of the uniform distribution for all parameters/dimensions
     """
-    logparams = np.asarray(logparams)
-    # check that values are within limits
-    if np.all(limits[0] < logparams) and np.all(logparams < limits[1]):
+    params = np.asarray(params)
+    limits = np.asarray(limits)
+    # check that parameters are within their respective limits
+    if np.all(limits[:, 0] < params) and np.all(params < limits[:, 1]):
         return 0.0
     return -np.inf
-    
-def loglikelihood(logparams, x, y, dielectricfn, wavenum, collisionfn, cutoff=1):
+```
+
+For the log likelihood function, we want to enforce equal preference to all simulation outcomes that match the data to within some uncertainty, regardless of the de-
+tails of the fit. To do that, we use a cutoff function that smooths the boundaries between accepted and rejected values for the parameters. For this notebook,
+we are also considering noise-free data, so we use the _relative_ residual in our likelihood.
+
+```{code-cell} ipython3
+def loglikelihood(
+    params, 
+    x, 
+    y, 
+    dielectricfn, 
+    wavenum, 
+    collisionfn, 
+    cutoff=0.01
+):
     """
     log likelihood function that is the log of an N-dimensional cut-off
     function with soft (exponential) sides.
 
-    logparams (array_like): parameters that go into collision rate model
+    params (array_like): parameters that go into collision rate model
     x: frequency data points corresponding to output data `y`
     y: ELF data points
     dielectricfn: dielectric function, a function of `wavenum` and `freq`
@@ -159,7 +292,9 @@ def loglikelihood(logparams, x, y, dielectricfn, wavenum, collisionfn, cutoff=1)
     freq: array of frequency values
     collisionfn: function for collision rate, depends on `freq` and `params`
     hyperparams (dict): keyword arguments for the hyperparameters of the
-        likelihood function.
+        likelihood function. Default 0.01 corresponds to a cutoff of roughly
+        1% agreement between data and the model -- any deviation much more
+        than would return a much smaller log likelihood. 
     
     returns:
         log likelihood evaluated for the given parameters at the input `x`.
@@ -167,30 +302,44 @@ def loglikelihood(logparams, x, y, dielectricfn, wavenum, collisionfn, cutoff=1)
     if cutoff <= 0:
         raise RuntimeError("cutoff must be positive and nonzero")
         
-    params = np.exp(logparams)
-    residual = residual_fn(x,
-                           y,
-                           dielectricfn,
-                           wavenum,
-                           collisionfn,
-                           params
-                          )
+    residual = residual_fn(
+        x,
+        y,
+        dielectricfn,
+        wavenum,
+        collisionfn,
+        params,
+        type="rel"
+    )
         
     loglik = -np.max((residual / (np.sqrt(2) * cutoff))**2)
     
     return loglik
+```
 
-def logposterior_fn(logparams, x, y, dielectricfn, wavenum, collisionfn, priorhyperparams={}, likhyperparams={}):
+For the log posterior distribution, we combine both the log prior and log likelihood functions.
+
+```{code-cell} ipython3
+def logposterior_fn(
+    params,
+    x, 
+    y, 
+    dielectricfn, 
+    wavenum, 
+    collisionfn, 
+    priorhyperparams={}, 
+    likhyperparams={}
+):
     """
     log posterior pdf.
 
+    params: the parameters for `collisionfn`
     x: frequency data points corresponding to output data `y`
     y: ELF data points
     dielectricfn: dielectric function, a function of `wavenum` and `freq`
     wavenum: wave number value(s)
     freq: array of frequency values
     collisionfn: function for collision rate, depends on `freq` and (the exponential of) `logparams`
-    logparams: the logarithms of the parameters for `collisionfn`
     likhyperparams (dict): keyword arguments for the hyperparameters of the
         prior function.
     likhyperparams (dict): keyword arguments for the hyperparameters of the
@@ -200,8 +349,8 @@ def logposterior_fn(logparams, x, y, dielectricfn, wavenum, collisionfn, priorhy
         log posterior function that only depends on params of collision rate
         model.
     """
-    lgprior = logprior(logparams, **priorhyperparams)
-    lglik = loglikelihood(logparams,
+    lgprior = logprior(params, **priorhyperparams)
+    lglik = loglikelihood(params,
                           x, 
                           y, 
                           dielectricfn, 
@@ -209,18 +358,28 @@ def logposterior_fn(logparams, x, y, dielectricfn, wavenum, collisionfn, priorhy
                           collisionfn, 
                           **likhyperparams
                          )
-    
+
+    # if either of the prior or likelihood not finite,
+    # return -infinity
     if not (np.isfinite(lgprior) and np.isfinite(lglik)):
         return -np.inf
         
     return lgprior + lglik
 ```
 
+Define a (log) posterior distribution that only depends on the parameters of the collision rate model
+
 ```{code-cell} ipython3
 lik_cutoff = 0.05
-prior_lims = (-5, 3)
+prior_lims = [
+    [0, 5],
+    [0, 5],
+    [0, 5],
+    [0, 100],
+    [0, 100]
+]
 
-def logposterior(logparams):
+def logposterior(params):
     """
     Helper function for logposterior that treats all but the `logparams` argument as global
     variables.
@@ -228,15 +387,19 @@ def logposterior(logparams):
     Doing it this way (as opposed to a lambda function, for example) because we need to
     pickle it for multiprocessing (see emcee docs).
     """
-    return logposterior_fn(logparams,
-                           freq_data_trim / AtomicUnits.energy,
+    return logposterior_fn(params,
+                           freq_data / AtomicUnits.energy,
                            elf_data,
                            Mermin(ElectronGas(t, d, dos_fn)),
-                           wavenum_val * AtomicUnits.length,
+                           wavenum * AtomicUnits.length,
                            collisionrate,
                            priorhyperparams = {"limits": prior_lims},
                            likhyperparams = {"cutoff": lik_cutoff}
                           )
+```
+
+```{code-cell} ipython3
+logposterior(optresult.x)
 ```
 
 ## Run the MCMC sampler
@@ -256,15 +419,15 @@ runinfo = {
          factors, LB form, inelastic processes], from file {samplesfile}""",
     "input data temperature [eV]" : teV,
     "input data density [1/angstrom^3]" : d_ang,
-    "input data wavenumber [1/angstrom]" : wavenum_val,
+    "input data wavenumber [1/angstrom]" : wavenum,
     "collision rate model" : "collision_activate_decay",
     "likelihood function" : f"Soft (expenonential) cutoff with a cutoff value of {lik_cutoff}",
     "prior distribution function" : f"Uniform distribution with boundaries ({prior_lims})"
 }
 
 # sampler properties
-ndim = 7 # number of parameters
-numchains = 14
+ndim = 5 # number of parameters
+numchains = 10
 numsamples = 100
 
 # # avoid overwriting datasets
@@ -272,17 +435,16 @@ numsamples = 100
 backend = emcee.backends.HDFBackend(samplesfile, name=dataset)
 backend.reset(numchains, ndim)
 
-# randomly initialize chains within the boundaries (log scale: prior_lims)
+# randomly initialize chains within the boundaries
 rng = np.random.default_rng()
-initial_states = prior_lims[0] \
-    + (prior_lims[1] - prior_lims[0]) * rng.random(size=(numchains, ndim))
+initial_state = optresult.x + 1e-4 * rng.random(size=(numchains, ndim))
 
 # perform ensemble MCMC sampling of logposterior
 with Pool() as pool:
     sampler = emcee.EnsembleSampler(
         numchains, ndim, logposterior, backend=backend, pool=pool
     )
-    sampler.run_mcmc(initial_states, numsamples, progress=True)
+    sampler.run_mcmc(initial_state, numsamples, progress=True)
 
 # add information to h5py file
 with h5py.File(samplesfile, "a") as f:
@@ -328,11 +490,14 @@ fig, axes = plt.subplots(ndim, figsize=(10,2.5*5), sharex=True)
 samples = sampler.get_chain()
 for i in range(ndim):
     ax = axes[i]
-    # transform back to normal values (working with the log of the params)
-    ax.plot(np.exp(samples[:,:,i]), 'k', alpha=0.3)
+    ax.plot(samples[:,:,i], 'k', alpha=0.3)
     #ax.set_xlim(0, len(samples))
     ax.set_ylabel(f"{paramnames[i]}")
     ax.yaxis.set_label_coords(-0.1, 0.5)
 
 axes[-1].set_xlabel("step number");
+```
+
+```{raw-cell}
+
 ```
