Fix to plot correct collision & ELF data
Using the correct model collision rate instead of the average atom
collision rate in the final plots in notebook 5.1. Also separating the
mcmc sample run, which can take over 1 1/2 hrs, into its own cell.

--- a/notebooks/exploratory/5.0-twh-inferrence-AAcollisions.md
+++ b/notebooks/exploratory/5.0-twh-inferrence-AAcollisions.md
@@ -400,7 +400,9 @@ runinfo = {
 ndim = 5 # number of parameters
 numchains = 32
 numsamples = 25_000
+```
 
+```{code-cell} ipython3
 # # avoid overwriting datasets
 # dataset = unique_hdf5_group(samplesfile, dataset)
 backend = emcee.backends.HDFBackend(samplesfile, name=dataset)
@@ -428,7 +430,7 @@ with h5py.File(samplesfile, "a") as f:
 # # view attributes of dataset
 # with h5py.File(samplesfile, "a") as f:
 #     print(list(f.keys()))
-#     dset = f["mcmc_samples"]
+#     dset = f["mcmc_samples_AAdata"]
 #     for attr in dset.attrs:
 #         print(f"{attr} : {dset.attrs[attr]}")
 ```
@@ -464,7 +466,7 @@ paramnames = (
     "logistic_gradient"
 )
 fig, axes = plt.subplots(ndim, figsize=(10,2.5*5), sharex=True)
-samples = sampler.get_chain()
+samples = backend.get_chain()
 for i in range(ndim):
     ax = axes[i]
     ax.plot(samples[:,:,i], 'k', alpha=0.3)
@@ -533,8 +535,4 @@ plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.ylim(1e-6)
 plt.legend()
 # plt.savefig("../../reports/figures/mcmc_AAdata_ELFsamples")
-```
-
-```{code-cell} ipython3
-
 ```
