Add mean and true parameter info to corner plot

--- a/notebooks/exploratory/5.1-twh-inference-model-data.md
+++ b/notebooks/exploratory/5.1-twh-inference-model-data.md
@@ -496,6 +496,14 @@ axes[-1].set_xlabel("step number");
 import corner
 
 fig = corner.corner(flat_samples, labels=paramnames)
+
+# compute empirical mean of samples
+mean = np.mean(flat_samples, axis=0)
+
+corner.overplot_lines(fig, mean, linestyle="--", color="C0")
+corner.overplot_points(fig, mean[np.newaxis], marker="o", linestyle="--", color="C0")
+corner.overplot_lines(fig, popt_AAcoll, color="C3")
+corner.overplot_points(fig, popt_AAcoll[np.newaxis], marker="o", color="C3")
 ```
 
 ```{code-cell} ipython3
