--- a/notebooks/exploratory/5.0-twh-inference-AAcollisions.md
+++ b/notebooks/exploratory/5.0-twh-inference-AAcollisions.md
@@ -481,6 +481,13 @@ axes[-1].set_xlabel("step number");
 import corner
 
 fig = corner.corner(flat_samples, labels=paramnames)
+
+# compute empirical mean of samples
+mean = np.mean(flat_samples, axis=0)
+
+corner.overplot_lines(fig, mean, linestyle="--", color="C0")
+corner.overplot_points(fig, mean[np.newaxis], marker="o", linestyle="--", color="C0")
+
 # plt.savefig("../../reports/figures/mcmc_AAdata_corner")
 ```
 
