--- a/notebooks/exploratory/1.0-twh-dsf-sensitivity.md
+++ b/notebooks/exploratory/1.0-twh-dsf-sensitivity.md
@@ -168,13 +168,13 @@ plt.legend()
 The collision rate has the special property that it obeys Kramers-Kronig relationship. This means that the real and imaginary parts of the collision rate are connected through the Kramers-Kronig transform. This function is stored in `src/utilities`.
 
 ```{code-cell} ipython3
-from src.utilities import collrateimag
+from src.utilities import kramerskronig
 ```
 
 ```{code-cell} ipython3
 xlog = np.geomspace(1e-1, 1e3, 100)
 νr = ν_lorentz(xlog, width=10)
-νi = collrateimag(νr)
+νi = kramerskronig(xlog, νr)
 ```
 
 ```{code-cell} ipython3
@@ -243,7 +243,7 @@ def plotsensitivity(
 
         def ν(ω_):
             realcoll = ν_model(ω_, **kw)
-            imagcoll = collrateimag(realcoll)
+            imagcoll = kramerskronig(ω_, realcoll)
             return realcoll + 1j * imagcoll
 
         elfcalc = elec_loss_fn(dielectric.Mermin(eg), q, ω, ν)
