--- a/notebooks/exploratory/2.0-twh-collision-models.md
+++ b/notebooks/exploratory/2.0-twh-collision-models.md
@@ -19,7 +19,7 @@ We ultimately want to infer a collision frequency from DSF data, but to do that 
 ```{code-cell} ipython3
 import numpy as np
 import matplotlib.pyplot as plt
-from src.utilities import collrateimag
+from src.utilities import kramerskronig
 ```
 
 ## Model 1: Drude * (1 + Sigmoid)
