--- a/notebooks/exploratory/4.0-twh-optimize-known-collisions.md
+++ b/notebooks/exploratory/4.0-twh-optimize-known-collisions.md
@@ -28,7 +28,7 @@ from uegdielectric import ElectronGas
 from uegdielectric.dielectric import Mermin
 
 from src.inference.collision_models import collision_activate_decay
-from src.utilities import collrateimag, AtomicUnits, elec_loss_fn
+from src.utilities import kramerskronig, AtomicUnits, elec_loss_fn
 ```
 
 # Define collision rate model
@@ -39,7 +39,7 @@ def collisionrate(freq, params):
     # real part
     recollision = collision_activate_decay(freq, **params)
     # imaginary part
-    imcollision = collrateimag(recollision)
+    imcollision = kramerskronig(freq, recollision)
 
     return recollision + 1j * imcollision
 ```
@@ -167,7 +167,7 @@ initparams = { "drude_height": 1,
               }
 
 # optimization results
-optresult = dict_least_squares(residual, initparams)
+optresult = dict_least_squares(residual, initparams, max_nfev=100)
 ```
 
 ```{code-cell} ipython3
