--- a/notebooks/exploratory/4.1-twh-optimize-known-AA_collisions.md
+++ b/notebooks/exploratory/4.1-twh-optimize-known-AA_collisions.md
@@ -45,7 +45,7 @@ from uegdielectric.dielectric import Mermin
 
 from src.inference.collision_models import collision_activate_decay
 from src.inference.mcmc_inference import unique_hdf5_group
-from src.utilities import collrateimag, AtomicUnits, elec_loss_fn
+from src.utilities import kramerskronig, AtomicUnits, elec_loss_fn
 
 import warnings
 warnings.filterwarnings('ignore')
@@ -59,7 +59,7 @@ def collisionrate(freq, params):
     # real part
     recollision = collision_activate_decay(freq, *params)
     # imaginary part
-    imcollision = collrateimag(recollision)
+    imcollision = kramerskronig(freq, recollision)
 
     return recollision + 1j * imcollision
 ```
@@ -89,7 +89,7 @@ true_collrate_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, 
 dos_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, dos_data)
 
 # create a new, more regular frequency grid that what exists in the data file
-freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 200) # [eV]
+freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 100) # [eV]
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
 wavenum_val = 0.7 / AtomicUnits.length # 1/[angstrom]
 ```
@@ -155,7 +155,7 @@ residual = partial(residual_fn,
 initparams = (1, 1, 1, 1, 1)
 
 # optimization results
-optresult = optimize.least_squares(residual, initparams, max_nfev=150)
+optresult = optimize.least_squares(residual, initparams, max_nfev=100)
 ```
 
 ```{code-cell} ipython3
@@ -202,4 +202,8 @@ plt.ylabel("ELF [au]")
 plt.xlabel(r"$\omega$ [eV]")
 plt.ylim(1e-6) # resolution of data
 plt.legend()
+```
+
+```{code-cell} ipython3
+
 ```
