--- a/notebooks/exploratory/4.3-twh-optimize-two-wavenum-ELF.md
+++ b/notebooks/exploratory/4.3-twh-optimize-two-wavenum-ELF.md
@@ -48,7 +48,7 @@ from uegdielectric.dielectric import Mermin
 
 from src.inference.collision_models import collision_activate_decay
 from src.inference.mcmc_inference import unique_hdf5_group
-from src.utilities import collrateimag, AtomicUnits, elec_loss_fn
+from src.utilities import kramerskronig, AtomicUnits, elec_loss_fn
 
 import warnings
 warnings.filterwarnings('ignore')
@@ -167,7 +167,7 @@ def collisionrate(freq, params):
     # real part
     recollision = collision_activate_decay(freq, *params)
     # imaginary part
-    imcollision = collrateimag(recollision)
+    imcollision = kramerskronig(freq, recollision)
 
     return recollision + 1j * imcollision
 ```
@@ -394,7 +394,7 @@ def analysis(
             collisionfn,
             type=residualtype
         )
-        optresult1 = optimize.least_squares(residual1, initparams, max_nfev=50)
+        optresult1 = optimize.least_squares(residual1, initparams, bounds=(0, np.inf), max_nfev=50)
         
         # residual and optimization for second set of data
         residual2 = partial(
@@ -406,7 +406,7 @@ def analysis(
             collisionfn,
             type=residualtype
         )
-        optresult2 = optimize.least_squares(residual2, initparams, max_nfev=50)
+        optresult2 = optimize.least_squares(residual2, initparams, bounds=(0, np.inf), max_nfev=50)
 
         optresult = np.asarray([optresult1, optresult2])
         optcollisions = np.asarray([collisionfn(freq, x) for x in [optresult1.x, optresult2.x]])
@@ -431,7 +431,7 @@ def analysis(
             collisionfn,
             type=residualtype
         )
-        optresult = optimize.least_squares(residual, initparams, max_nfev=50)
+        optresult = optimize.least_squares(residual, initparams, bounds=(0, np.inf), max_nfev=50)
         optcollisions = collisionfn(freq, optresult.x)
         elf_calc = normelf(dielectricfn,
                            wavenum,
@@ -453,7 +453,7 @@ Start off with an initial guess for our parameters
 
 ```{code-cell} ipython3
 # initial parameter guesses
-initparams = (0, 1, 0, 1, 1.5, 0, 10)
+initparams = (1, 1, 1, 1, 1)
 ```
 
 ## 1. absolute residual
