--- a/notebooks/exploratory/4.2-twh-optimize-loss-fn-form.md
+++ b/notebooks/exploratory/4.2-twh-optimize-loss-fn-form.md
@@ -44,7 +44,7 @@ from uegdielectric.dielectric import Mermin
 
 from src.inference.collision_models import collision_activate_decay
 from src.inference.mcmc_inference import unique_hdf5_group
-from src.utilities import collrateimag, AtomicUnits, elec_loss_fn
+from src.utilities import kramerskronig, AtomicUnits, elec_loss_fn
 
 import warnings
 warnings.filterwarnings('ignore')
@@ -75,7 +75,7 @@ true_collrate_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, 
 dos_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, dos_data)
 
 # create a new, more regular frequency grid that what exists in the data file
-freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 101) # [eV]
+freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 100) # [eV]
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
 wavenum_val = 0.7 / AtomicUnits.length # 1/[angstrom]
 ```
@@ -116,7 +116,7 @@ def collisionrate(freq, params):
     # real part
     recollision = collision_activate_decay(freq, *params)
     # imaginary part
-    imcollision = collrateimag(recollision)
+    imcollision = kramerskronig(freq, recollision)
 
     return recollision + 1j * imcollision
 ```
