--- a/notebooks/exploratory/5.0-twh-inference-AAcollisions.md
+++ b/notebooks/exploratory/5.0-twh-inference-AAcollisions.md
@@ -39,7 +39,7 @@ from uegdielectric.dielectric import Mermin
 
 from src.inference.collision_models import collision_activate_decay, drude, gendrude, logistic
 from src.inference.mcmc_inference import unique_hdf5_group
-from src.utilities import collrateimag, AtomicUnits, elec_loss_fn
+from src.utilities import kramerskronig, AtomicUnits, elec_loss_fn
 
 import warnings
 warnings.filterwarnings('ignore')
@@ -105,7 +105,7 @@ def collisionrate(freq, params):
     # real part
     recollision = collision_activate_decay(freq, *params)
     # imaginary part
-    imcollision = collrateimag(recollision)
+    imcollision = kramerskronig(freq, recollision)
 
     return recollision + 1j * imcollision
 ```
