Changes to avoid overwriting previous data

--- a/notebooks/exploratory/5.0-twh-inference-AAcollisions.md
+++ b/notebooks/exploratory/5.0-twh-inference-AAcollisions.md
@@ -347,7 +347,7 @@ prior_lims = [
     [0, 5],
     [0, 5],
     [0, 100],
-    [0, 100]
+    [0, 200]
 ]
 
 def logposterior(params):
@@ -378,16 +378,20 @@ logposterior(optresult.x)
 We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
+samplesfile = "../../data/mcmc/mcmc_AAdata"
+dataset = "mcmc_samples_AAdata_2"
+```
+
+```{code-cell} ipython3
 import h5py
 from datetime import datetime
 
-samplesfile = "../../data/mcmc/mcmc_AAdata"
-dataset = "mcmc_samples_AAdata"
 runinfo = {
     "date" : datetime.today().strftime('%a %d %b %Y, %I:%M%p'),
     "input data info" : f"""Data generated using Average Atom 
          collisions [T-matrix cross sections, nonideal DOS, QOZ structure
-         factors, LB form, inelastic processes], from file {datafile}""",
+         factors, LB form, inelastic processes], from file {datafile}. Uses updated
+         Kramers-Kronig transform for imaginary part of collisoin rate.""",
     "input data temperature [eV]" : teV,
     "input data density [1/angstrom^3]" : d_ang,
     "input data wavenumber [1/angstrom]" : wavenum,
