--- a/notebooks/exploratory/5.1-twh-inference-model-data.md
+++ b/notebooks/exploratory/5.1-twh-inference-model-data.md
@@ -361,7 +361,7 @@ prior_lims = [
     [0, 5],
     [0, 5],
     [0, 100],
-    [0, 100]
+    [0, 200]
 ]
 
 def logposterior(params):
@@ -393,7 +393,7 @@ We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
 samplesfile = "../../data/mcmc/mcmc_modeldata"
-dataset = "mcmc_samples_modeldata"
+dataset = "mcmc_samples_modeldata_2"
 ```
 
 ```{code-cell} ipython3
@@ -402,7 +402,8 @@ from datetime import datetime
 runinfo = {
     "date" : datetime.today().strftime('%a %d %b %Y, %I:%M%p'),
     "input data info" : f"""Data generated using collision rate model
-        fit to average atom data from file {datafile}""",
+        fit to average atom data from file {datafile}. Uses updated
+        Kramers-Kronig transform for imaginary part of collisoin rate.""",
     "input data temperature [eV]" : teV,
     "input data density [1/angstrom^3]" : d_ang,
     "input data wavenumber [1/angstrom]" : wavenum,
@@ -457,7 +458,7 @@ backend = emcee.backends.HDFBackend(samplesfile, name=dataset)
 ```
 
 ```{code-cell} ipython3
-tau = backend.get_autocorr_time()
+tau = backend.get_autocorr_time(tol=0)
 burnin = int(2 * np.max(tau))
 thin = int(0.5 * np.min(tau))
 flat_samples = backend.get_chain(discard=burnin, flat=True, thin=thin)
