updating notebook for new 4 param model

--- a/notebooks/exploratory/2.1-twh-collision-activate-decay-flexibility.md
+++ b/notebooks/exploratory/2.1-twh-collision-activate-decay-flexibility.md
@@ -13,9 +13,9 @@ jupyter:
     name: python3
 ---
 
-# Flexibility of `collision_activate_decay` collision rate model
+# Flexibility of `collision_*activate_decay` collision frequency models
 
-In this notebook, we examine the flexibility of the `collision_activate_decay` model in `src.inference.collision_models` by fitting it directly to examples of known collision rate theories explored in the paper [_Improving dynamic collision frequencies: Impacts on dynamic structure factors and stopping powers in warm dense matter_](https://doi.org/10.1063/5.0143738). We are particular interested in the expressiveness of our model when the height of the first Drude function is set to zero (see docstring of `collision_activate_decay` for details), effectively reducing the number of parameters we will have to fit. In this case, `collision_activate_decay` will consist of a Lorentzian-type function with a variable height, decay rate, and its width fixed by its height, modulated by a sigmoid-type logistic function with adjustable center and activation gradient parameters.
+In this notebook, we examine the flexibility of the `collision_activate_decay` model in `src.inference.collision_models` by fitting it directly to examples of known collision rate theories explored in the paper [_Improving dynamic collision frequencies: Impacts on dynamic structure factors and stopping powers in warm dense matter_](https://doi.org/10.1063/5.0143738). We are particular interested in the expressiveness of our model when compared to the model `collision_drude_activate_decay` which has one extra parameter. In this case, `collision_activate_decay` will consist of a Lorentzian-type function with a variable height, decay rate, and its width fixed by its height, modulated by a sigmoid-type logistic function with adjustable center and activation gradient parameters.
 
 ```python
 import numpy as np
@@ -23,6 +23,14 @@ import matplotlib.pyplot as plt
 from scipy.optimize import curve_fit
 
 from src.inference import collision_models as models
+```
+
+```python
+# Load the "autoreload" extension so that code can change
+%load_ext autoreload
+
+# Always reload modules so that as you change code in src, it gets loaded
+%autoreload 2
 ```
 
 # Read in data for the collision rate theories we want to directly fit to
@@ -33,7 +41,7 @@ The data file includes the indepedent variable as the first column and then pair
 datafile = "../../data/external/Al-1 _vwf.txt"
 
 # last column of data is not needed for this
-data = np.loadtxt(datafile, skiprows=9, unpack=True)[:-1]
+data = np.loadtxt(datafile, skiprows=9, usecols=[0, 1, 2, 3, 4, 5, 6], unpack=True)
 print(f"shape of data = {data.shape}")
 ```
 
@@ -51,12 +59,12 @@ count = 1
 for colldata in data[1::2]:
     # fit the model to the data
     # sigma is the data so we consider the relativer residual in the fit: (ydata - model) / ydata
-    popt, _ = curve_fit(models.collision_activate_decay, data[0], colldata, p0=(1,1,1,1,1), sigma=colldata, bounds=(0, np.inf))
+    popt, _ = curve_fit(models.collision_drude_activate_decay, data[0], colldata, p0=(1,1,1,1,1), sigma=colldata, bounds=(0, np.inf))
     optparams.append(popt)
     # plot the data
     p = plt.loglog(data[0], colldata, label=f"{count}")
     # plot the model with optimized parameters
-    plt.plot(data[0], models.collision_activate_decay(data[0], *popt), color=p[-1].get_color(), ls="--")
+    plt.plot(data[0], models.collision_drude_activate_decay(data[0], *popt), color=p[-1].get_color(), ls="--")
     count += 1
 
 plt.ylim(1e-3)
@@ -70,9 +78,8 @@ print(np.asarray(optparams))
 Define our new 4-parameter model
 
 ```python
-def collisionmodel(x, *params):
-    # set first parameter to 0 before returning the function
-    return models.collision_activate_decay(x, 0, *params)
+def collisionmodel(x, a, b, c, d):
+    return models.collision_activate_decay(x, a, b, c, d)
 ```
 
 ```python
@@ -93,7 +100,9 @@ for colldata in data[1::2]:
 
 plt.ylim(1e-3)
 plt.legend()
-
+plt.xlabel(r"$\hbar \omega$ (eV)")
+plt.ylabel("Collision frequency (at. u.)")
+# plt.savefig("../../reports/figures/model-fit-AA-collisions")
 print(np.asarray(optparams))
 ```
 
@@ -101,7 +110,7 @@ The fit to the simplest curve in the plots above (blue) should be possible witho
 
 ```python
 def simplemodel(x, height, power):
-    return models.collision_activate_decay(x, 0, height, power, 0, 0)
+    return models.collision_activate_decay(x, height, power, 0, 0)
 ```
 
 ```python
