--- a/notebooks/exploratory/4.0-twh-optimize-known-collisions.md
+++ b/notebooks/exploratory/4.0-twh-optimize-known-collisions.md
@@ -31,6 +31,14 @@ from src.inference.collision_models import collision_activate_decay
 from src.utilities import kramerskronig, AtomicUnits, elec_loss_fn
 ```
 
+```{code-cell} ipython3
+# Load the "autoreload" extension so that code can change
+%load_ext autoreload
+
+# Always reload modules so that as you change code in src, it gets loaded
+%autoreload 2
+```
+
 # Define collision rate model
 
 ```{code-cell} ipython3
@@ -51,9 +59,8 @@ filename = "../../data/raw/mermin_ELF_test.txt"
 # just copying from the data file
 # parameters for collision model
 true_params = {
-    "drude_height": 0.1,
-    "gendrude_height": 1,
-    "gendrude_power": 0.5,
+    "lorentzian_height": 1,
+    "lorentzian_powerlaw": 0.5,
     "logistic_activate": 0.1,
     "logistic_gradient": 100
 }
@@ -159,9 +166,8 @@ residual = residual_for_optimizer(freq_data / AtomicUnits.energy,
                                   collisionrate
                                  )
 # initial parameter guesses
-initparams = { "drude_height": 1, 
-               "gendrude_height": 1, 
-               "gendrude_power": 1, 
+initparams = { "lorentzian_height": 1, 
+               "lorentzian_powerlaw": 1, 
                "logistic_activate": 1, 
                "logistic_gradient": 1
               }
@@ -202,8 +208,4 @@ plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.ylim(1e-6) # resolution of data
 plt.legend()
-```
-
-```{code-cell} ipython3
-
 ```
