--- a/notebooks/exploratory/4.1-twh-optimize-known-AA_collisions.md
+++ b/notebooks/exploratory/4.1-twh-optimize-known-AA_collisions.md
@@ -152,10 +152,10 @@ residual = partial(residual_fn,
                    collisionrate
                   )
 # initial parameter guesses
-initparams = (1, 1, 1, 1, 1)
+initparams = (1, 1, 1, 1)
 
 # optimization results
-optresult = optimize.least_squares(residual, initparams, max_nfev=100)
+optresult = optimize.least_squares(residual, initparams, bounds=(0, np.inf), max_nfev=100)
 ```
 
 ```{code-cell} ipython3
