--- a/notebooks/exploratory/4.2-twh-optimize-loss-fn-form.md
+++ b/notebooks/exploratory/4.2-twh-optimize-loss-fn-form.md
@@ -337,7 +337,7 @@ def analysis(
 
 ```{code-cell} ipython3
 # initial parameter guesses
-initparams = (1, 1, 1, 1, 1)
+initparams = (1, 1, 1, 1)
 ```
 
 ## 1. absolute residual
