--- a/notebooks/exploratory/4.3-twh-optimize-two-wavenum-ELF.md
+++ b/notebooks/exploratory/4.3-twh-optimize-two-wavenum-ELF.md
@@ -453,7 +453,7 @@ Start off with an initial guess for our parameters
 
 ```{code-cell} ipython3
 # initial parameter guesses
-initparams = (1, 1, 1, 1, 1)
+initparams = (1, 1, 1, 1)
 ```
 
 ## 1. absolute residual
