--- a/notebooks/exploratory/5.1-twh-inference-model-data.md
+++ b/notebooks/exploratory/5.1-twh-inference-model-data.md
@@ -99,7 +99,7 @@ popt_AAcoll, pcov = optimize.curve_fit(
     collision_activate_decay, 
     freq_data / AtomicUnits.energy,
     AA_collrate_fn(freq_data / AtomicUnits.energy).real,
-    (1,1,1,1,1),
+    (1,1,1,1),
     bounds=(0, np.inf)
 )
 print(popt_AAcoll)
@@ -193,7 +193,7 @@ residual = partial(residual_fn,
                    type="rel"
                   )
 # initial parameter guesses
-initparams = (0.1, 0.1, 2, 1, 10)
+initparams = (0.1, 2, 1, 10)
 
 # optimization results
 optresult = optimize.least_squares(residual, initparams, bounds=(0, np.inf), max_nfev=150)
@@ -359,7 +359,6 @@ lik_cutoff = 0.05
 prior_lims = [
     [0, 5],
     [0, 5],
-    [0, 5],
     [0, 100],
     [0, 200]
 ]
@@ -393,7 +392,7 @@ We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
 samplesfile = "../../data/mcmc/mcmc_modeldata"
-dataset = "mcmc_samples_modeldata_2"
+dataset = "mcmc samples - model data - rel. residual - 4 params"
 ```
 
 ```{code-cell} ipython3
@@ -407,15 +406,16 @@ runinfo = {
     "input data temperature [eV]" : teV,
     "input data density [1/angstrom^3]" : d_ang,
     "input data wavenumber [1/angstrom]" : wavenum,
-    "collision rate model" : "collision_activate_decay",
+    "collision rate model" : "collision_activate_decay, 4 parameters",
     "likelihood function" : f"Soft (expenonential) cutoff with a cutoff value of {lik_cutoff}",
+    "residual" : "relative",
     "prior distribution function" : f"Uniform distribution with boundaries ({prior_lims})"
 }
 
 # sampler properties
-ndim = 5 # number of parameters
+ndim = 4 # number of parameters
 numchains = 32
-numsamples = 25_000
+numsamples = 15_000
 ```
 
 ```{code-cell} ipython3
@@ -475,11 +475,10 @@ print("Mean acceptance fraction: {0:.3f}".format(np.mean(backend.accepted / back
 ```{code-cell} ipython3
 plt.close()
 paramnames = (
-    "drude_height",
-    "gendrude_height",
-    "gendrude_power",
-    "logistic_activate",
-    "logistic_gradient"
+    "gen. Lorentzian height",
+    "gen. Lorentzian power-law",
+    "Logistic activate",
+    "Logistic gradient"
 )
 fig, axes = plt.subplots(ndim, figsize=(10,2.5*5), sharex=True)
 samples = backend.get_chain()
