--- a/notebooks/exploratory/5.0-twh-inference-AAcollisions.md
+++ b/notebooks/exploratory/5.0-twh-inference-AAcollisions.md
@@ -14,7 +14,7 @@ kernelspec:
 
 # Bayesian Inference with Markov Chain Monte Carlo
 
-So far, the analysis notebooks have examined inverting the ELF have used non-linear least squares. This works to some extent, but the resulting collision rate model parameters are very sensitive to the intial guess and the ELF itself is actually fairly independent of this choice. In this notebook, we use another tool called Bayesian inference to not find the single, best set of parameters for the collision rate model, but finds the _posterior_ distribution $p(\alpha|y_\mathrm{data})$ of sets of parameters $\alpha$ for a given set of data $y_\mathrm{data}$. Because the number of parameters we are searching for spans more than a hand-full of parameters for our model (in this case, five), we rely on Markov chain Monte Carlo to efficient sample from our probability distribution.
+So far, the analysis notebooks have examined inverting the ELF have used non-linear least squares. This works to some extent, but the resulting collision rate model parameters are very sensitive to the intial guess and the ELF itself is actually fairly independent of this choice. In this notebook, we use another tool called Bayesian inference to not find the single, best set of parameters for the collision rate model, but finds the _posterior_ distribution $p(\alpha|y_\mathrm{data})$ of sets of parameters $\alpha$ for a given set of data $y_\mathrm{data}$. Because the number of parameters we are searching for spans more than a hand-full of parameters for our model, we rely on Markov chain Monte Carlo to efficient sample from our probability distribution.
 
 ```{code-cell} ipython3
 # Load the "autoreload" extension so that code can change
@@ -177,7 +177,7 @@ residual = partial(residual_fn,
                    type="rel"
                   )
 # initial parameter guesses
-initparams = (1, 1, 1, 1, 1)
+initparams = (1, 1, 1, 1)
 
 # optimization results
 optresult = optimize.least_squares(residual, initparams, bounds=(0, np.inf), max_nfev=150)
@@ -345,7 +345,6 @@ lik_cutoff = 0.05
 prior_lims = [
     [0, 5],
     [0, 5],
-    [0, 5],
     [0, 100],
     [0, 200]
 ]
@@ -379,7 +378,7 @@ We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
 samplesfile = "../../data/mcmc/mcmc_AAdata"
-dataset = "mcmc_samples_AAdata_2"
+dataset = "mcmc samples - AA data - rel. residual - 4 params"
 ```
 
 ```{code-cell} ipython3
@@ -395,15 +394,16 @@ runinfo = {
     "input data temperature [eV]" : teV,
     "input data density [1/angstrom^3]" : d_ang,
     "input data wavenumber [1/angstrom]" : wavenum,
-    "collision rate model" : "collision_activate_decay",
+    "collision rate model" : "collision_activate_decay, 4 parameter",
     "likelihood function" : f"Soft (expenonential) cutoff with a cutoff value of {lik_cutoff}",
+    "residual" : "relative",
     "prior distribution function" : f"Uniform distribution with boundaries ({prior_lims})"
 }
 
 # sampler properties
-ndim = 5 # number of parameters
+ndim = 4 # number of parameters
 numchains = 32
-numsamples = 25_000
+numsamples = 15_000
 ```
 
 ```{code-cell} ipython3
@@ -463,11 +463,10 @@ print("Mean acceptance fraction: {0:.3f}".format(np.mean(backend.accepted / back
 ```{code-cell} ipython3
 plt.close()
 paramnames = (
-    "drude_height",
-    "gendrude_height",
-    "gendrude_power",
-    "logistic_activate",
-    "logistic_gradient"
+    "gen. Lorentzian height",
+    "gen. Lorentzian power-law",
+    "Logistic activate",
+    "Logistic gradient"
 )
 fig, axes = plt.subplots(ndim, figsize=(10,2.5*5), sharex=True)
 samples = backend.get_chain()
